2008-11-12  Tim Jenness  <timj@poma.jach.hawaii.edu>

	---- Release V0.21 CPAN ----
	
	* Temp.pm: Integrate patches from bleadperl for cygwin. (thanks to 
	Jari Aalto)

	* t/seekable.t: seekable test was failing on perl 5.6.0 so we now
	skip the specific test. (thanks to Zefram)

	* Temp.pm: Remove the test on the parent directory to see if a file
	can be written. This will be found out anyway as soon as the file open
	is attempted. AFS systems may fail a -w test but still allow a file to
	be created. (thanks to Christopher Ellison)

	* Temp.pm: Put an eval around rmtree. Some versions of rmtree croak
	if you attempt to remove a directory that you are inside. (debian bug
	479317).
	
2008-03-15 Tim Jenness <tjenness@cpan.org>

	* Temp.pm: Localize special variables in END blocks and destructors.
	
2007-12-20  Tim Jenness  <tjenness@cpan.org>

	---- Release V0.20 CPAN ----
	
	* t/lock.t: Fix logic problem with BEGIN block that was causing grief on some
	systems (thanks to Steve Peters for patch).

2007-11-19  Tim Jenness  <tjenness@cpan.org>

	----- Release V0.19 CPAN -----
	
	* Temp.pm (tempfile): Add EXLOCK option which can be used to disable O_EXLOCK

	* t/lock.t: Test ability to disable O_EXLOCK
	
2007-11-16  Tim Jenness  <tjenness@cpan.org>

	* Temp.pm (newdir): Add object oriented interface to "tempdir". Use
	File::Temp->newdir()

2007-11-15  Tim Jenness  <tjenness@cpan.org>

	* Temp.pm (tempdir): Add a note to the tempdir documentation to
	clarify that the default is for the directory not to be temporary
	and that use of an OO approach may be required (thanks to David
	Golden's annotation on CPAN).
	
	* Temp.pm (_randchar): Remove _randchar function (no longer used) 

	* Temp.pm: Add note  about File::Tempdir module
	
2007-11-14  Tim Jenness  <tjenness@cpan.org>

	* Temp.pm (new): Track pid used when file created and make sure
	object destructor deletes the file only when the current pid
	matches the original pid (RT#11067 again - thanks to Grousse)